<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="item"
            type="com.haerul.sihandist.data.entity.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="Mapples - Update Profile"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:theme="@style/AppTheme.Toolbar"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:layout_width="match_parent"/>


        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_15dp">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_card"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="26dp"
                        android:enabled="@{viewModel.getIsLoading() ? false : true}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/noInduk"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:enabled="false"
                            android:hint="@string/no_induk"
                            android:inputType="text|number"
                            android:padding="0dp"
                            android:textSize="@dimen/textSmallExtra" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="26dp"
                        android:enabled="@{viewModel.getIsLoading() ? false : true}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hakUser"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:enabled="false"
                            android:hint="@string/user_acces"
                            android:inputType="textCapWords"
                            android:padding="0dp"
                            android:textSize="@dimen/textSmallExtra" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="26dp"
                        android:enabled="@{viewModel.getIsLoading() ? false : true}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:enabled="false"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:padding="0dp"
                            android:textSize="@dimen/textSmallExtra" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="26dp"
                        android:enabled="@{viewModel.getIsLoading() ? false : true}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:enabled="true"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:padding="0dp"
                            android:textSize="@dimen/textSmallExtra" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="26dp"
                        android:enabled="@{viewModel.getIsLoading() ? false : true}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/noHp"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:enabled="true"
                            android:hint="@string/telp"
                            android:inputType="text|phone"
                            android:padding="0dp"
                            android:textSize="@dimen/textSmallExtra" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="26dp"
                        android:enabled="@{viewModel.getIsLoading() ? false : true}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:enabled="true"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="0dp"
                            android:textSize="@dimen/textSmallExtra" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="26dp"
                        android:enabled="@{viewModel.getIsLoading() ? false : true}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/unit"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:enabled="true"
                            android:hint="@string/unit"
                            android:inputType="text"
                            android:padding="0dp"
                            android:textSize="@dimen/textSmallExtra" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</layout>